--- a/test/2D_riemann/config.cfg
+++ b/test/2D_riemann/config.cfg
@@ -19,7 +19,7 @@ turbulence          = 0
 space_order         = 1
 
 riemann_solver      = 1
-#solver are 1:Roe ; 2:RHLL ; 3:AUSM ; 4: AUSM+up
+#solver are 1:Roe ; 2:Lax-Friedrich ; 3:AUSM ; 4: AUSM+up
 
 timestep_method = 1 
 # 1: timestep from config [makes only sence for instat]
