--- a/test/sod_shock_tube/i-Direction/config.cfg
+++ b/test/sod_shock_tube/i-Direction/config.cfg
@@ -1,59 +1,36 @@
 [control]
 iterations          = 1000
-min res             = 1E-10
-animation           = false
-monitor points      = false
+#Number of Iterations
 
 [output]
 solution            = 1000
 residual            = 100
-#500
-metric              = false
-# outputs meric information: true|false 
-boundary cell       = 0
-# boundary cell : true|false
-timestep = false
-# timestep: true|false
-res out             = 1,4
-# gibt an welche Residuen ausgegebene werden sollen
+res_out             = 1,4
 
 [model]
-equation            = euler
-# equation can either be euler(E), navier-stokes(NS), heat(H)
+equation            = 1
+# 1:euler ; 2: navier-stokes
 
-turbulence          = laminar
-# turbulence modelling available:
-#   laminar, qw, kw, ke, SST, LES, DDES, DNS
+turbulence          = 0
+# 0: laminar 
+###, qw, kw, ke, SST, LES, DDES, DNS
 
 [disc]
-dimension           = 2D
-# dimension can either be 2D, 2D-rot, 3D
+space_order         = 2
 
-#space disc          = notvd 
-space disc          = muscl
-# reconstruction: 
-#    NOTVD (0) MUSCL(1) WENO(2) ENO(3) MLP(4)
+riemann_solver      = 1
+#solver are 1:Roe ; 2:Lax-Friedrich ; 3:AUSM ; 4: AUSM+up
 
-space order         = 2
+timestep_method = 1 
+# 1: timestep from config [makes only sence for instat]
+# 2: minimal timestep of all cells ( Calculated with CFL number)
 
-riemann solver      = Roe
-#solver are RHLL,Roe 
-
-time disc           = stationary
-# equation: stationary(0), instationary(1)
-
-timestep method = dt
-# timestep method can be: 
-#   dt : timestep from config [makes only sence for instat]
-#   CFL : constant CFL number (varying timestep in each cell) [only stationary]
-#   minDT : minimal timestep of all cells ( Calculated with CFL number)
-
-time order          = 1
+time_order          = 1
 
 CFL                 = 0.1
 
 #timestep            = 2.11725E-04
-timestep            = 2.E-04
+timestep            = 1.E-04
 
 [animation]
 start               = 1
@@ -67,4 +44,4 @@ git                 = git.bin
 boundary            = bc.bin
 solution            = sol.bin
 animation           = ani.bin
-monitor points      = mpkt.cfg
+monitor_points      = mpkt.cfg
