--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,14 +1,15 @@
 FC=gfortran
 #FC=ifort
 
-CGNSlibs = /usr/lib/libcgns.so -lhdf5
+CGNSlibs = -lcgns -lhdf5
 LIBS = $(CGNSlibs) -lm
 
+INCLUDE = -I/usr/include/
 CFLAGS = -std=f2008
 CFLAGS += -Wconversion -Wall -Wextra -Warray-temporaries -Werror
 #CFLAGS += -DDEBUG #Unnecessary comments are oppressed
 CFLAGS += -O3
-CFLAGS += -g -fbacktrace -ffpe-trap=invalid,zero,overflow -fcheck=all -fbounds-check
+#CFLAGS += -g -fbacktrace -ffpe-trap=invalid,zero,overflow -fcheck=all -fbounds-check
 EXECUTABLE = ../bin/AMBS
 SOURCE_DIR = ../src
 
@@ -22,10 +23,10 @@ compile: $(EXECUTABLE)
 	@true
 
 $(EXECUTABLE): $(OBJECTS)
-	$(FC) $(CFLAGS) $^ -o $@ $(LIBS)
+	$(FC) $(CFLAGS) $^ -o $@ $(LIBS) $(INCLUDE)
 
 %.o: %.F90
-	$(FC) -c $(CFLAGS) $< -o $@
+	$(FC) -c $(CFLAGS) $(INCLUDE) $< -o $@ 
 	
 include $(SOURCE_DIR)/inc_Makefile_dep
 	
