--- a/test/array_function/Makefile
+++ b/test/array_function/Makefile
@@ -1,4 +1,4 @@
-CFLAGS += -Wconversion -Wall -Wextra -Warray-temporaries -Werror
+CFLAGS += -Wconversion -Wall -Wextra -Warray-temporaries# -Werror
 CFLAGS += -O3
 CFLAGS += -g -fbacktrace -ffpe-trap=invalid,zero,overflow -fcheck=all -fbounds-check
 
