--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -1,9 +1,9 @@
 FC=gfortran
 
-CGNSlibs = -lcgns -lhdf5
-LIBS = $(CGNSlibs) -lm
+CGNSlibs = /home/kell_ro/software/cgns/src/cgns_build/lib/libcgns.a /media/LDS/module/tools/hdf5/1.8.15_GCC-4.9.2/lib/libhdf5.a
+LIBS = $(CGNSlibs) -lm -ldl -lz
 
-INCLUDE = -I/usr/include/
+INCLUDE = -I/usr/include/ -I/home/kell_ro/software/cgns/src/cgns_build/include/
 
 CFLAGS = -std=f2008
 CFLAGS +=-g -fbacktrace
