--- a/test/DIT/64x64x64/config.cfg
+++ b/test/DIT/64x64x64/config.cfg
@@ -1,9 +1,9 @@
 [control]
-iterations          = 200
+iterations          = 1000
 #Number of Iterations
 
 [output]
-solution            = 1000
+solution            = 2000
 residual            = 10
 res_out             = 1,4
 
@@ -30,7 +30,7 @@ time_order          = 1
 CFL                 = 0.1
 
 #timestep            = 2.11725E-04
-timestep            = 1.E-07
+timestep            = 1.0E-08
 
 [animation]
 start               = 1
