Dateiformat der ein und ausgabe von CGNS auf HDF5 geaendert

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,8 +1,7 @@
 FC=gfortran
 #FC=ifort
 
-CGNSlibs = -lcgns -lhdf5
-LIBS = $(CGNSlibs) -lm
+LIBS = -lcgns -lhdf5 -lhdf5hl_fortran -lhdf5_hl -lhdf5_fortran -lm
 
 INCLUDE = -I/usr/include/
 CFLAGS = -std=f2008
