--- a/test/DIT/64x64x64/config.cfg
+++ b/test/DIT/64x64x64/config.cfg
@@ -3,7 +3,7 @@ iterations          = 1000
 #Number of Iterations
 
 [output]
-solution            = 2000
+solution            = 100
 residual            = 10
 res_out             = 1,4
 
@@ -29,8 +29,10 @@ time_order          = 1
 
 CFL                 = 0.1
 
+C_LES_SGS           = 0.5
+
 #timestep            = 2.11725E-04
-timestep            = 1.0E-08
+timestep            = 1.0E-07
 
 [animation]
 start               = 1
