--- a/tools/Makefile
+++ b/tools/Makefile
@@ -4,7 +4,10 @@ REALMAKEFILE=../Makefile.in
 
 all: solver
 
-solver: FORCE
+compile_source:
+	@$(MAKE) -C ../ --no-print-directory solver
+
+solver: FORCE compile_source
 	@(cd $(OBJECTS_DIR) && $(MAKE) -f $(REALMAKEFILE) --no-print-directory)
 
 clean: FORCE
