--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -1,9 +1,10 @@
 FC=gfortran
 
-CGNSlibs = -lcgns -lhdf5
-LIBS = $(CGNSlibs) -lm
+HOMEDIR=../../
+CODE_OBJ=$(HOMEDIR)obj/
 
-INCLUDE = -I/usr/include/
+LIBS = -lhdf5 -lhdf5hl_fortran -lhdf5_hl -lhdf5_fortran -lm
+INCLUDE = -I/usr/include/ -I$(CODE_OBJ)
 
 CFLAGS = -std=f2008
 CFLAGS +=-g -fbacktrace
@@ -13,13 +14,13 @@ SOURCE_DIR = ../src
 
 _SCRIPT=pre_config make_dependencies
 
-_EXE= extract_1D
+_EXE= extract_1D create_xdmf
 #sol2vtk
 
 EXE = $(patsubst %,$(EXECUTABLE_DIR)/%,$(_EXE))
 SCRIPT = $(patsubst %,$(EXECUTABLE_DIR)/%,$(_SCRIPT))
 
-all: $(SCRIPT) $(EXE)
+all: $(SCRIPT) $(EXE) module_gridgen.o module_post.o
 
 $(EXECUTABLE_DIR)/make_dependencies:
 	@ln -s $(SOURCE_DIR)/make_dependencies.py $@
@@ -29,24 +30,13 @@ $(EXECUTABLE_DIR)/pre_config:
 	@ln -s $(SOURCE_DIR)/pre_config.py $@
 
 
-$(EXECUTABLE_DIR)/extract_1D:$(SOURCE_DIR)/extract_1D.F90 file_io_mod.o const_mod.o cgns.o data_mod.o screen_io_mod.o control_mod.o
-	$(FC) $(CFLAGS) $^ $(LIBS) -o $@ $(INCLUDE)
-
-$(EXECUTABLE_DIR)/sol2vtk:$(SOURCE_DIR)/sol2vtk.F90 file_io_mod.o const_mod.o cgns.o data_mod.o screen_io_mod.o control_mod.o
+$(EXECUTABLE_DIR)/extract_1D:$(SOURCE_DIR)/extract_1D.F90 module_post.o $(CODE_OBJ)file_io_mod.o $(CODE_OBJ)const_mod.o $(CODE_OBJ)data_mod.o $(CODE_OBJ)screen_io_mod.o $(CODE_OBJ)control_mod.o
 	$(FC) $(CFLAGS) $^ $(LIBS) -o $@ $(INCLUDE)
 
 
-%.o:../../src/%.F90
-	$(FC) $(CFLAGS) $< -c $(INCLUDE)
-const_mod.o:../../src/const_mod.F90
-	$(FC) $(CFLAGS) $< -c $(INCLUDE)
-data_mod.o:../../src/data_mod.F90
-	$(FC) $(CFLAGS) $< -c $(INCLUDE)
-file_io_mod.o:../../src/file_io_mod.F90 screen_io_mod.o
-	$(FC) $(CFLAGS) $< -c $(INCLUDE)
-screen_io_mod.o:../../src/screen_io_mod.F90
-	$(FC) $(CFLAGS) $< -c $(INCLUDE)
-control_mod.o:../../src/control_mod.F90
-	$(FC) $(CFLAGS) $< -c $(INCLUDE)
+$(EXECUTABLE_DIR)/%:$(SOURCE_DIR)/%.F90
+	$(FC) $(CFLAGS) $^ $(LIBS) -o $@ $(INCLUDE)
 
+%.o: ../src/%.F90
+	$(FC) $(CFLAGS) $< -c $(INCLUDE)
 include ../../src/inc_Makefile_dep
