--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 FC=gfortran
 #FC=ifort
 
-LIBS = -lcgns -lhdf5 -lhdf5hl_fortran -lhdf5_hl -lhdf5_fortran -lm
+LIBS = -lhdf5 -lhdf5hl_fortran -lhdf5_hl -lhdf5_fortran -lm
 
 INCLUDE = -I/usr/include/
 CFLAGS = -std=f2008
