flate_plate-2_bloecke zeigt sehr starke schwingunge in den residuen aber convergiert langsam

--- a/test/flate_plate_2blocks/config.cfg
+++ b/test/flate_plate_2blocks/config.cfg
@@ -11,9 +11,9 @@
 !!                     RUNTIME AND OUTPUT CONTROL                             !!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
-iterations           = 100000         ! Number of Iterations
+iterations           = 1000000     ! Number of Iterations
 sol_out_screen_int   = 10000
-res_out_screen_int   = 1000
+res_out_screen_int   = 100
 res_nr_out           = 1
 
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
@@ -32,7 +32,7 @@ timestep_method      = 1              ! 1: timestep from config [makes only senc
                                       ! 2: minimal timestep of all cells ( Calculated with CFL number)
 time_order           = 1
 CFL                  = 0.1
-timestep             = 2.E-07
+timestep             = 4.E-07
 
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 !!                         ANIMATION      CONTROL                             !!
