--- a/test/sod_shock_tube/diagonal/config.cfg
+++ b/test/sod_shock_tube/diagonal/config.cfg
@@ -1,47 +1,51 @@
-[control]
-iterations          = 10000
-#Number of Iterations
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!                                                                                                                              !! 
+!!                                                                                                                              !! 
+!!                               CONFIG FILE FOR AMBS                                                                           !! 
+!!                                                                                                                              !! 
+!!                                                                                                                              !! 
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
-[output]
-solution            = 10
-residual            = 100
-res_out             = 1,4
 
-[model]
-equation            = 1
-# 1:euler ; 2: navier-stokes
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!                     RUNTIME AND OUTPUT CONTROL                             !!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
-turbulence          = 0
-# 0: laminar 
-###, qw, kw, ke, SST, LES, DDES, DNS
+iterations          = 1000
+sol_out_screen_int   = 100000
+res_out_screen_int   = 100
+res_nr_out           = 1,4
 
-[disc]
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!                              MODEL     CONTROL                             !!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+equation            = 1 ! 1:euler ; 2: navier-stokes
+turbulence          = 0 ! 0: laminar ###, qw, kw, ke, SST, LES, DDES, DNS
+c_les_sgs            = 0.5
+
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!                         DISCRETIZATION CONTROL                             !!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 space_order         = 1
-
-riemann_solver      = 1
-#solver are 1:Roe ; 2:Lax-Friedrich ; 3:AUSM ; 4: AUSM+up
-
-timestep_method = 1 
-# 1: timestep from config [makes only sence for instat]
-# 2: minimal timestep of all cells ( Calculated with CFL number)
-
+riemann_solver      = 1 !solver are 1:Roe ; 2:Lax-Friedrich ; 3:AUSM ; 4: AUSM+up
+timestep_method     = 1 ! 1: timestep from config [makes only sence for instat]
+                        ! 2: minimal timestep of all cells ( Calculated with CFL number)
 time_order          = 1
-
 CFL                 = 0.1
-
-#timestep            = 2.11725E-04
 timestep            = 1.E-04
 
-[animation]
-start               = 1
-output              = 10
-variables           = u
-# variables are rho,u,v,w,E,Ma,T,p
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!                         ANIMATION      CONTROL                             !!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+start                = 1
+output               = 10
+variables            = u           ! variables are rho,u,v,w,E,Ma,T,p
 
-
-[files]
-git                 = git.bin
-boundary            = bc.bin
-solution            = sol.bin
-animation           = ani.bin
-monitor_points      = mpkt.cfg
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!                     FILENAMES                                              !!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+git                  = git.bin
+boundary             = bc.bin
+solution             = sol.bin
+animation            = ani.bin
+monitor_points       = mpkt.cfg
