--- a/test/DIT/64x64x64/config.cfg
+++ b/test/DIT/64x64x64/config.cfg
@@ -1,47 +1,50 @@
-[control]
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!                                                                                                                              !! 
+!!                                                                                                                              !! 
+!!                               CONFIG FILE FOR AMBS                                                                           !! 
+!!                                                                                                                              !! 
+!!                                                                                                                              !! 
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!                     RUNTIME AND OUTPUT CONTROL                             !!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 iterations          = 1000
-#Number of Iterations
+sol_out_screen_int  = 100
+res_out_screen_int  = 10
+res_nr_out          = 1,4
 
-[output]
-solution            = 100
-residual            = 10
-res_out             = 1,4
 
-[model]
-equation            = 1
-# 1:euler ; 2: navier-stokes
-
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!                              MODEL     CONTROL                             !!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+equation            = 2
 turbulence          = 0
-# 0: laminar 
-###, qw, kw, ke, SST, LES, DDES, DNS
+c_les_sgs            = 0.5
 
-[disc]
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!                         DISCRETIZATION CONTROL                             !!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 space_order         = 2
-
-riemann_solver      = 1
-#solver are 1:Roe ; 2:Lax-Friedrich ; 3:AUSM ; 4: AUSM+up
-
-timestep_method = 1 
-# 1: timestep from config [makes only sence for instat]
-# 2: minimal timestep of all cells ( Calculated with CFL number)
-
+riemann_solver      = 1 !solver are 1:Roe ; 2:Lax-Friedrich ; 3:AUSM ; 4: AUSM+up
+timestep_method     = 1 ! 1: timestep from config [makes only sence for instat]
+                        ! 2: minimal timestep of all cells ( Calculated with CFL number)
 time_order          = 1
-
 CFL                 = 0.1
-
-C_LES_SGS           = 0.5
-
-#timestep            = 2.11725E-04
+!C_LES_SGS           = 0.5
 timestep            = 1.0E-07
 
-[animation]
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!                         ANIMATION      CONTROL                             !!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 start               = 1
 output              = 10
-variables           = u
-# variables are rho,u,v,w,E,Ma,T,p
+variables           = u ! variables are rho,u,v,w,E,Ma,T,p
 
-
-[files]
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!                     FILENAMES                                              !!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 git                 = git.bin
 boundary            = bc.bin
 solution            = sol.bin
