--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -20,7 +20,7 @@ _EXE= extract_1D create_xdmf pre_config
 EXE = $(patsubst %,$(EXECUTABLE_DIR)/%,$(_EXE))
 SCRIPT = $(patsubst %,$(EXECUTABLE_DIR)/%,$(_SCRIPT))
 
-all: $(SCRIPT) $(EXE) module_gridgen.o module_post.o
+all: $(SCRIPT) $(EXE) module_gridgen.o module_post.a
 
 $(EXECUTABLE_DIR)/make_dependencies:
 	@ln -s $(SOURCE_DIR)/make_dependencies.py $@
@@ -28,6 +28,9 @@ $(EXECUTABLE_DIR)/make_dependencies:
 
 #$(EXECUTABLE_DIR)/pre_config:
 	#@ln -s $(SOURCE_DIR)/pre_config.py $@
+
+module_post.a:module_post.o $(CODE_OBJ)screen_io_mod.o $(CODE_OBJ)control_mod.o
+	@ar r $@ $^
 
 
 $(EXECUTABLE_DIR)/extract_1D:$(SOURCE_DIR)/extract_1D.F90 module_post.o $(CODE_OBJ)file_io_mod.o $(CODE_OBJ)const_mod.o $(CODE_OBJ)data_mod.o $(CODE_OBJ)screen_io_mod.o $(CODE_OBJ)control_mod.o
