--- a/test/flate_plate/config.cfg
+++ b/test/flate_plate/config.cfg
@@ -11,8 +11,8 @@
 !!                     RUNTIME AND OUTPUT CONTROL                             !!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
-iterations           = 100000  !Number of Iterations
-sol_out_screen_int   = 100000
+iterations           = 1000000  !Number of Iterations
+sol_out_screen_int   = 10000
 res_out_screen_int   = 1000
 res_nr_out           = 1,4
 
