--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -14,8 +14,7 @@ SOURCE_DIR = ../src
 
 _SCRIPT=pre_config make_dependencies
 
-_EXE= extract_1D create_xdmf pre_config
-#sol2vtk
+_EXE= extract_1D create_xdmf pre_config sol2vtk
 
 EXE = $(patsubst %,$(EXECUTABLE_DIR)/%,$(_EXE))
 SCRIPT = $(patsubst %,$(EXECUTABLE_DIR)/%,$(_SCRIPT))
@@ -32,6 +31,9 @@ $(EXECUTABLE_DIR)/make_dependencies:
 module_post.a:module_post.o $(CODE_OBJ)screen_io_mod.o $(CODE_OBJ)control_mod.o
 	@ar r $@ $^
 
+
+$(EXECUTABLE_DIR)/sol2vtk:$(SOURCE_DIR)/sol2vtk.F90 module_post.o $(CODE_OBJ)file_io_mod.o $(CODE_OBJ)const_mod.o $(CODE_OBJ)data_mod.o $(CODE_OBJ)screen_io_mod.o $(CODE_OBJ)control_mod.o
+	$(FC) $(CFLAGS) $^ $(LIBS) -o $@ $(INCLUDE)
 
 $(EXECUTABLE_DIR)/extract_1D:$(SOURCE_DIR)/extract_1D.F90 module_post.o $(CODE_OBJ)file_io_mod.o $(CODE_OBJ)const_mod.o $(CODE_OBJ)data_mod.o $(CODE_OBJ)screen_io_mod.o $(CODE_OBJ)control_mod.o
 	$(FC) $(CFLAGS) $^ $(LIBS) -o $@ $(INCLUDE)
