--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,14 +1,4 @@
-FC=gfortran
-#FC=ifort
-
-LIBS = -lhdf5 -lhdf5hl_fortran -lhdf5_hl -lhdf5_fortran -lm
-
-INCLUDE = -I/usr/include/
-CFLAGS = -std=f2008
-CFLAGS += -Wconversion -Wall -Wextra -Warray-temporaries -Werror
-#CFLAGS += -DDEBUG #Unnecessary comments are oppressed
-CFLAGS += -O3
-#CFLAGS += -g -fbacktrace -ffpe-trap=invalid,zero,overflow -fcheck=all -fbounds-check
+include ../Makefile.in
 EXECUTABLE = ../bin/AMBS
 SOURCE_DIR = ../src
 
