--- a/test/Taylor-Green/64x64x64/Makefile
+++ b/test/Taylor-Green/64x64x64/Makefile
@@ -1,16 +1,9 @@
-FC=gfortran
 
 HOMEDIR=../../../
 CODE_OBJ=$(HOMEDIR)obj/
 TOOLS_OBJ=$(HOMEDIR)tools/obj/
 
-LIBS = -lhdf5hl_fortran -lhdf5_hl -lhdf5 -lhdf5_fortran -lm -lfftw3
-
-INCLUDE = -I/usr/include/ -I$(TOOLS_OBJ) -I$(CODE_OBJ)
-#CFLAGS = -std=f2008
-CFLAGS += -Wconversion -Wall -Wextra -Warray-temporaries #-Werror
-#CFLAGS += -DDEBUG #Unnecessary comments are oppressed
-CFLAGS += -O3
+include $(HOMEDIR)/Makefile.in
 
 PRE_CONFIG=$(HOMEDIR)tools/bin/pre_config
 CREATE_XDMF=$(HOMEDIR)tools/bin/create_xdmf
