--- a/test/2D_riemann/Makefile
+++ b/test/2D_riemann/Makefile
@@ -1,33 +1,14 @@
-FC=gfortran
-
 HOMEDIR=../../
 
+include $(HOMEDIR)Makefile.global
 
-CODE_OBJ=$(HOMEDIR)obj/
-TOOLS_OBJ=$(HOMEDIR)tools/obj/
+INCLUDE += -I$(TOOLS_OBJ) -I$(CODE_OBJ)
 
-LIBS = -lhdf5hl_fortran -lhdf5_hl -lhdf5 -lhdf5_fortran -lm
+.PHONY: all run clean grid_inf show
+.DEFAULT_GOAL := all
 
-INCLUDE = -I/usr/include/ -I$(TOOLS_OBJ) -I$(CODE_OBJ)
-CFLAGS = -std=f2008
-CFLAGS += -Wconversion -Wall -Wextra -Warray-temporaries -Werror
-#CFLAGS += -DDEBUG #Unnecessary comments are oppressed
-CFLAGS += -O3
-
-PRE_CONFIG=$(HOMEDIR)tools/bin/pre_config
-EXTRACT_1D=$(HOMEDIR)tools/bin/extract_1D
-CREATE_XDMF=$(HOMEDIR)tools/bin/create_xdmf
-PROGRAM=$(HOMEDIR)bin/AMBS
-
-.PHONY: all cmp run clean cp grid_inf show
-
-	
-all: cmp run #show
-
-cmp:
-	@$(MAKE) -C $(HOMEDIR) --no-print-directory
-
-	
+all: compile_global run #show
+	@true
 
 run: data_in.h5 config.bin
 	@echo 'Running Grid-Adaper on simple Chamber'
@@ -49,7 +30,3 @@ clean:
 	@rm -vf *.o *.mod *.dat *.plt *.png *.vtk *.txt *.bin gridgen *.dx *.h5 *.csv *.xdmf
 	@rm -vrf *~
 
-##### CLEAN PROJECT
-cp: 
-	@echo "CLEANING SOLVER DIR"
-	@make -C $(HOMEDIR) clean --no-print-directory
