--- a/test/airfoil/Makefile
+++ b/test/airfoil/Makefile
@@ -1,30 +1,12 @@
-FC=gfortran
-
 HOMEDIR=../../
+include $(HOMEDIR)Makefile.global
 
-LIBS = -lhdf5hl_fortran -lhdf5_hl -lhdf5 -lhdf5_fortran -lm
-
-INCLUDE = -I/usr/include/ -I$(HOMEDIR)tools/obj/ -I$(HOMEDIR)obj/
-CFLAGS = -std=f2008
-CFLAGS += -Wconversion -Wall -Wextra -Warray-temporaries -Werror
-#CFLAGS += -DDEBUG #Unnecessary comments are oppressed
-CFLAGS += -O3
-
-PRE_CONFIG=$(HOMEDIR)tools/bin/pre_config
-PROGRAM=$(HOMEDIR)bin/AMBS
-
-.PHONY: all cmp run clean cp grid_inf show
+INCLUDE += -I$(TOOLS_OBJ) -I$(CODE_OBJ)
+.PHONY: all run clean grid_inf show
+.DEFAULT_GOAL := all
 
 	
-all: cmp run #show
-
-cmp:
-	@$(MAKE) -C $(HOMEDIR) --no-print-directory
-
-	
-
-#run: gridgen
-#	@./gridgen
+all: compile_global run #show
 
 run: data_in.h5 config.bin
 	@$(PROGRAM) #-debug
@@ -37,14 +19,11 @@ data_in.h5: gridgen
 
 config.bin: config.cfg	
 	@$(PRE_CONFIG)
-gridgen: gridgen.F90 $(HOMEDIR)tools/obj/module_gridgen.o
+
+gridgen: gridgen.F90 $(TOOLS_OBJ)module_gridgen.o
 	$(FC) $(CFLAGS) $^ -o $@ $(LIBS) $(INCLUDE)
 
 clean:
 	@rm -vf *.o *.mod *.ufo *.dat *.plt *.png *.txt *.bin gridgen *.silo *.dx *.csv *.h5 *.xdmf
 	@rm -vrf *~
 
-##### CLEAN PROJECT
-cp: 
-	@echo "CLEANING SOLVER DIR"
-	@make -C $(HOMEDIR) clean --no-print-directory
